[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rltmod"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
  "pysb>=1.15.0",
  "pysb-pkpd>=0.3.2",
  "pysb-units>=0.4.0",
  "numpy",
]
authors = [
  {name = "Blake A. Wilson", email = "blakeaw1102@gmail.com"},
]
description = "Semi-mechanistic radioligand therapy (RLT) PK/PD model encoded in PySB."
readme = "README.md"
keywords = ["pysb", "biomodels", "reaction models", "systems biology"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Bio-Modelers",
  "Topic :: Biological Modeling :: Model Building",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD 2-Clause",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/Borealis-BioModeling/radioligand-therapy-model"
Issues = "https://github.com/Borealis-BioModeling/radioligand-therapy-model/issues"
Changelog = "https://github.com/Borealis-BioModeling/radioligand-therapy-model/blob/main/CHANGELOG.md"

# Find namespace package
[tool.setuptools.packages.find]
where = ["./"]
include = ["rltmod"]
namespaces = false

# Set the dynamic version
[tool.setuptools.dynamic]
version = {attr = "rltmod.__version__"}